Add no editor border edge option
Close #707
Add no editor border edge option in preferences dialog.
Add new API NPPM_SETEDITORBORDEREDGE

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -107,8 +107,9 @@ BEGIN
     CONTROL         "Aligned",IDC_RADIO_LWALIGN,"Button",BS_AUTORADIOBUTTON,311,71,60,10
     CONTROL         "Indent",IDC_RADIO_LWINDENT,"Button",BS_AUTORADIOBUTTON,311,85,62,10
     GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,142,122,148,30,BS_CENTER
-    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,135,67,13
-    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,225,135,12,8
+    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,145,135,67,13
+    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,213,135,12,8
+    CONTROL         "No edge",IDC_CHECK_NOEDGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,135,60,10
     CONTROL         "Display line number",IDC_CHECK_LINENUMBERMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,107,141,10
     CONTROL         "Display bookmark",IDC_CHECK_BOOKMARKMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,120,150,10
     CONTROL         "Enable current line highlighting",IDC_CHECK_CURRENTLINEHILITE,  "Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,133,129,10
