Add Debug Info feature

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -855,6 +855,7 @@ BEGIN
         MENUITEM "Update Notepad++",          IDM_UPDATE_NPP
 		MENUITEM "Set Updater Proxy...",         IDM_CONFUPDATERPROXY
 		MENUITEM SEPARATOR
+        MENUITEM "Debug Info",           IDM_DEBUGINFO
         MENUITEM "About Notepad++",           IDM_ABOUT
     END
 
@@ -893,6 +894,18 @@ BEGIN
     // IDC_LICENCE_EDIT should be the last line, don't know why
     EDITTEXT        IDC_LICENCE_EDIT,31,99,209,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
 END
+
+IDD_DEBUGINFOBOX DIALOGEX 0, 0, 271, 200
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
+CAPTION "Debug Info"
+FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
+BEGIN
+    EDITTEXT        IDC_DEBUGINFO_EDIT,31,20,220,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
+		LTEXT           "Copy debug info into clipboard",IDC_DEBUGINFO_COPYLINK,31,120,126,8
+    DEFPUSHBUTTON   "OK",IDOK,106,160,50,14,BS_FLAT,WS_EX_STATICEDGE
+END
+
 
 IDD_GOLINE DIALOGEX 26, 41, 261, 88
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
