Enlarge text control items to fit translated texts
Closes #554

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -71,7 +71,7 @@ BEGIN
     GROUPBOX        "Localization",IDC_LOCALIZATION_GB_STATIC,57,6,147,35,BS_CENTER
     COMBOBOX        IDC_COMBO_LOCALIZATION,68,20,119,80,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Document List Panel",IDC_DOCSWITCH_GB_STATIC,57,121,147,40,BS_CENTER
-    CONTROL         "Show",IDC_CHECK_DOCSWITCH,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,64,131,89,10
+    CONTROL         "Show",IDC_CHECK_DOCSWITCH,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,64,131,135,10
     CONTROL         "Disable extension column",IDC_CHECK_DOCSWITCH_NOEXTCOLUMN,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,64,146,124,10
 END
@@ -95,7 +95,7 @@ BEGIN
     GROUPBOX        "Caret Settings",IDC_CARETSETTING_STATIC,46,1,199,40,BS_CENTER
     LTEXT           "Width :",IDC_WIDTH_STATIC,50,20,37,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_WIDTH_COMBO,89,18,40,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Blink rate :",IDC_BLINKRATE_STATIC,161,13,50,8
+    LTEXT           "Blink rate :",IDC_BLINKRATE_STATIC,161,13,60,8
     CONTROL         "",IDC_CARETBLINKRATE_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,25,67,13
     LTEXT           "S",IDC_CARETBLINKRATE_S_STATIC,225,25,12,8
     LTEXT           "F",IDC_CARETBLINKRATE_F_STATIC,144,25,12,8,0,WS_EX_RIGHT
@@ -121,7 +121,7 @@ IDD_PREFERENCE_SETTING_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    CONTROL         "Enable",IDC_CHECK_ENABLEDOCSWITCHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,15,69,10
+    CONTROL         "Enable",IDC_CHECK_ENABLEDOCSWITCHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,15,140,10
     CONTROL         "Enable MRU behaviour",IDC_CHECK_STYLEMRU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,28,140,10
     CONTROL         "Enable",IDC_CHECK_ENABLSMARTHILITE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,45,57,142,10
     CONTROL         "Match case",IDC_CHECK_SMARTHILITECASESENSITIVE, "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,45,71,142,10
@@ -204,10 +204,9 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,39,140,10
     GROUPBOX        "Display",IDC_DISPLAY_STATIC,121,65,225,73,BS_CENTER
     CONTROL         "In Submenu",IDC_CHECK_INSUBMENU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,76,79,10
-    CONTROL         "Only File Name",IDC_RADIO_ONLYFILENAME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,133,92,88,10
-    CONTROL         "Full File Name Path",IDC_RADIO_FULLFILENAMEPATH,"Button",BS_AUTORADIOBUTTON,133,106,109,10
-    CONTROL         "Customize Maximum Length:",IDC_RADIO_CUSTOMIZELENTH,
-                    "Button",BS_AUTORADIOBUTTON,133,120,114,10
+    CONTROL         "Only File Name",IDC_RADIO_ONLYFILENAME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,133,92,130,10
+    CONTROL         "Full File Name Path",IDC_RADIO_FULLFILENAMEPATH,"Button",BS_AUTORADIOBUTTON,133,106,130,10
+    CONTROL         "Customize Maximum Length:",IDC_RADIO_CUSTOMIZELENTH,"Button",BS_AUTORADIOBUTTON,133,120,114,10
     LTEXT           "0",IDC_CUSTOMIZELENGTHVAL_STATIC,251,120,18,8,WS_TABSTOP
 END
 
@@ -354,13 +353,13 @@ IDD_PREFERENCE_MULTIINSTANCE_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Multi-instance settings",IDC_MULTIINST_GB_STATIC,89,44,268,98,BS_CENTER
+    GROUPBOX        "Multi-instance settings",IDC_MULTIINST_GB_STATIC,89,44,268,110,BS_CENTER
     CONTROL         "Open session in a new instance of Notepad++",IDC_SESSIONININST_RADIO,
                     "Button",BS_AUTORADIOBUTTON,122,61,226,10
     CONTROL         "Always in multi-instance mode",IDC_MULTIINST_RADIO,
                     "Button",BS_AUTORADIOBUTTON,122,80,218,10
     CONTROL         "Default (mono-instance)",IDC_MONOINST_RADIO,"Button",BS_AUTORADIOBUTTON,122,99,196,10
-    LTEXT           "* The modification of this setting needs to restart Notepad++",IDD_STATIC_RESTARTNOTE,110,124,239,8
+    LTEXT           "* The modification of this setting needs to restart Notepad++",IDD_STATIC_RESTARTNOTE,110,124,239,20
 END
 
 IDD_PREFERENCE_DELIMITERSETTINGS_BOX DIALOGEX 0, 0, 455, 185
@@ -382,11 +381,11 @@ IDD_PREFERENCE_SETTINGSONCLOUD_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,89,BS_CENTER
-    CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,92,10
+    GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,102,BS_CENTER
+    CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,180,10
     CONTROL         "Set your cloud location path here:",IDC_WITHCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,180,10
 	EDITTEXT        IDC_CLOUDPATH_EDIT,134,88,179,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDD_CLOUDPATH_BROWSE_BUTTON,320,87,16,14
-    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,135,8
+    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,135,20
 END
 
