Add Visual Prolog language support
Closes #1439

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -750,6 +750,7 @@ BEGIN
         MENUITEM "Verilog",                 IDM_LANG_VERILOG
         MENUITEM "VHDL",                    IDM_LANG_VHDL
         MENUITEM "Visual Basic",            IDM_LANG_VB
+        MENUITEM "Visual Prolog",           IDM_LANG_VISUALPROLOG
         MENUITEM "XML",                     IDM_LANG_XML
         MENUITEM "YAML",                    IDM_LANG_YAML
         MENUITEM SEPARATOR
@@ -889,6 +890,7 @@ BEGIN
     POPUP "V"
     BEGIN
         MENUITEM "Visual Basic",          IDM_LANG_VB
+        MENUITEM "Visual Prolog",         IDM_LANG_VISUALPROLOG
         MENUITEM "VHDL",                  IDM_LANG_VHDL
         MENUITEM "Verilog",               IDM_LANG_VERILOG
     END
