Add new feature: Find in Finder
After finding in files, user can launch the find in Finder dialog from
the finder via its context menu command "Find in this finder...".
Find in Finder feature searchs the other occurrence into found results,,
that allow user to narrow down the search  and to refine their search
results.

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -91,7 +91,6 @@ IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
 
 IDD_INCREMENT_FIND DIALOGEX 0, 0, 400, 20
 STYLE DS_SYSMODAL | DS_CONTROL | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN
-//EXSTYLE WS_EX_TRANSPARENT
 FONT 8, TEXT("MS Shell Dlg")
 BEGIN
 	PUSHBUTTON   "X",IDCANCEL,2,3,16,14
@@ -111,6 +110,27 @@ CAPTION "Find result"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x0
 BEGIN
 DEFPUSHBUTTON   ">",IDC_INCFINDNXTOK,243,0,16,14, NOT WS_VISIBLE
+END
+
+IDD_FINDINFINDER_DLG DIALOGEX 36, 44, 367, 200
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW
+CAPTION "Find in finder"
+FONT 8, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
+    COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	CONTROL         "Search only in found lines",IDC_MATCHLINENUM_CHECK_FIFOLDER,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
+	CONTROL         "Match &whole word only",IDWHOLEWORD_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
+    CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
+
+    GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
+    CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
+    CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
+    CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
+	CONTROL         "&. matches newline",IDREDOTMATCHNL_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,67,9
+    PUSHBUTTON      "Find all",IDOK,268,20,90,14,WS_GROUP
+	PUSHBUTTON      "Close",IDCANCEL,268,38,90,14
 END
 
 #endif //FIND_REPLACE_DLG_RC
