--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -72,7 +72,7 @@ BEGIN
     PUSHBUTTON      "Find Next",IDOK,268,20,90,14,WS_GROUP
     PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,90,14
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,56,90,21,BS_MULTILINE
-    PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,90,21,BS_MULTILINE
+    PUSHBUTTON      "Find &All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,90,21,BS_MULTILINE
     PUSHBUTTON      "&Replace",IDREPLACE,268,38,90,14
     PUSHBUTTON      "Replace &All",IDREPLACEALL,268,56,90,14
     PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,74,90,21,BS_MULTILINE
